fix: overflow color picker

--- a/src/pages/details/client/ClientDetails.module.scss
+++ b/src/pages/details/client/ClientDetails.module.scss
@@ -1,4 +1,4 @@
 .color {
-  padding: 8px 4px;
+  padding: 8px 0;
   --deckgo-button-more-border: 1px solid var(--ion-color-medium);
 }
